--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,5 +10,5 @@
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
   %body
     %p.notice= notice
-    %p.notice= notice
+    %p.alert= alert
     = yield
