--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -8,7 +8,25 @@
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
+    %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css", :rel => "stylesheet"}
   %body
-    %p.notice= notice
-    %p.alert= alert
-    = yield
+    .container
+      %ul
+        %li= link_to "users", users_path
+        %li= link_to "dashboard", dashboard_path
+      .p-3
+        - if flash[:notice].present?
+          .alert.alert-success= flash[:notice]
+        - if flash[:warning].present?
+          .alert.alert-warning= flash[:warning]
+        - if flash[:alert].present?
+          .alert.alert-danger= flash[:alert]
+
+        - if content_for? :title
+          = content_for :previous_page
+
+        .d-flex.justify-content-between.align-items-center
+          = content_for :title
+          %div= content_for :title_actions
+
+      = yield
