--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,5 +1,5 @@
 nav {
-    background-color: red;
+    background-color: #333;
     color: #fff;
     display: flex;
     justify-content: flex-end;
