--- a/app/views/layouts/shared/_navbar.html.haml
+++ b/app/views/layouts/shared/_navbar.html.haml
@@ -1,6 +1,7 @@
 %nav
   %ul
     %li= link_to "Accueil", root_path
-    - if current_user.admin?
+    - if user_signed_in? && current_user.admin?
       %li= link_to "Admin", dashboard_path
+    - if user_signed_in?
       %li= link_to "Déconnexion", destroy_user_session_path, data: {turbo_method: :delete}
