--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -3,17 +3,26 @@
   = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f|
     = f.error_notification
     .form-inputs
-      = f.input :email,
-        required: true,
-        autofocus: true,
-        input_html: { autocomplete: "email" }
-      = f.input :password,
-        required: true,
-        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-        input_html: { autocomplete: "new-password" }
-      = f.input :password_confirmation,
-        required: true,
-        input_html: { autocomplete: "new-password" }
+      .col-md-6
+        = f.input :first_name, input_html: { autocomplete: "off" }
+      .col-md-6
+        = f.input :last_name, input_html: { autocomplete: "off" }
+      .col-md-6
+        = f.input :role, collection: User.translated_roles, input_html: { autocomplete: "off" }
+      .col-md-6
+        = f.input :email,
+          required: true,
+          autofocus: true,
+          input_html: { autocomplete: "email" }
+      .col-md-6
+        = f.input :password,
+          required: true,
+          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+          input_html: { autocomplete: "new-password" }
+      .col-md-6
+        = f.input :password_confirmation,
+          required: true,
+          input_html: { autocomplete: "new-password" }
     .form-actions
       = f.button :submit, "Sign up"
   = render "devise/shared/links"
